# parsley-debug-app

./: .gitignore  .scalafix.conf  Dockerfile  LICENSE  README.md  build-save  build.sbt  build.sh  config.yml  hello_everyone.sc  hello_world.sc  html.sc  index.css  index.html  package-lock.json  package.json  paragraph.sc  query.sc  run.sh  styles.css  test-laminar.sh  test-tauri.sh  test.sc  test.scala
.github/actions/setup/: action.yml
.github/workflows/: apple-config.yml  dill-ci.yml  dill-release.yml  linux-config.yml  windows-config.yml
backend/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: commands.rs  debug_tree.rs  events.rs  files.rs  lib.rs  saved_tree.rs  server.rs  state.rs  trees.rs
backend/src/commands/: breakpoint.rs  fetch.rs  save.rs  source.rs
backend/src/server/: launch.rs  parsley_tree.rs  request.rs  server_state.rs
backend/src/state/: app_handle.rs  app_state.rs  session_counter.rs  state_handle.rs  state_manager.rs
backend/src/trees/: debug_tree.rs  parsley_tree.rs  saved_tree.rs
frontend/: .gitignore
frontend/styles/displays/: debug-tree.css  popup.css  toast.css
project/: plugins.sbt
scripts/: build.sh  clean.sh  docker-build.sh  dockerbuild.sh  run.sh  setup.sh  test-laminar.sh  test-tauri.sh
src-laminar/: .gitignore  build.sbt  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json  vite.config.ts
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  debug_tree.rs  lib.rs  parser_info.rs  saved_tree.rs  server.rs  state.rs
(+115 files in other folders)
