[package]
name = "dill"
version = "0.4.0"
description = "A cross-platform debugging UI for `parsley-debug`"
authors = ["Jamie Willis (@j-mie6)", "Josh Walker (@josh-ja-walker)", "Aniket Gupta (@aniket1101)", "Priyansh Chugh (@PriyanshC)", "Alejandro Perez Fadon (@Aito0)", "Riley Horrix (@Riley-horrix)", "Adam Watson (@AdamW1087)"]
license = "BSD 3-Clause"
repository = "https://github.com/j-mie6/parsley-debug-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
rocket = { version = "0.5.1", features = ["json"] }
mockall = "0.13.1"
tauri-plugin-shell = "2"
